Fixing ill-advised attempt to prevent title wrappage

--- a/app/sass/page-index.scss
+++ b/app/sass/page-index.scss
@@ -180,8 +180,6 @@ $pale-grey: #fafafa;
       font-size: $font-size-medium;
       color: $blue-600;
       text-decoration: none;
-      white-space: nowrap;
-      text-overflow: ellipsis;
     }
   }
 }
